# web-scrapper

./: README.md  main.py  pyproject.toml
datasets/: othoba_products.csv
scrapy_selenium/: middlewares.py
web_scrapper/: othoba-product-details.ipynb  settings.py
web_scrapper/spiders/: othoba.py
